--- a/superadmin.html
+++ b/superadmin.html
@@ -100,7 +100,7 @@
         <button id="nav-drafts" onclick="showSection('drafts')">Drafts Sheet</button>
         <button id="nav-approval" onclick="showSection('approval')">Approval Sheet</button>
         <button id="nav-pay" onclick="showSection('pay')">Pay Sheet</button>
-        <button id="nav-charts" onclick="showSection('charts')">Charts</button>
+        <a href="dashboard.html"><button >Charts</button></a>
     </div>
     <button class="logout-btn" onclick="logoutUser()">Logout</button>
 </div>
