--- a/dashboard.html
+++ b/dashboard.html
@@ -443,10 +443,7 @@
         <div class="sidebar-header">Super Admin</div>
         <div class="sidebar-nav">
             <button id="nav-dashboard" onclick="showSection('dashboard')">Dashboard</button>
-            <button id="nav-users" onclick="showSection('users')">Manage Users</button>
-            <button id="nav-drafts" onclick="showSection('drafts')">Drafts Sheet</button>
-            <button id="nav-approval" onclick="showSection('approval')">Approval Sheet</button>
-            <button id="nav-pay" onclick="showSection('pay')">Pay Sheet</button>
+            <a href="superadmin.html"><button>Pay Sheet</button></a>
         </div>
         <button class="logout-btn" onclick="logoutUser()">Logout</button>
     </div>
