--- a/dashboard.html
+++ b/dashboard.html
@@ -443,7 +443,7 @@
         <div class="sidebar-header">Super Admin</div>
         <div class="sidebar-nav">
             <button id="nav-dashboard" onclick="showSection('dashboard')">Dashboard</button>
-            <a href="superadmin.html"><button>Pay Sheet</button></a>
+            <a href="superadmin.html"><button>Home</button></a>
         </div>
         <button class="logout-btn" onclick="logoutUser()">Logout</button>
     </div>
